--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <%- include("./partials/head.ejs") %>
 </head>
 <body>
     
     <!-- Navigation -->
-    <nav>
-        <div>
-            <a href="/">Blogs</a>
-            <p>Blog Site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include("./partials/nav.ejs") %>
+
     
     <!-- Create Form -->
     <div class="create-blog content">
